# sprayer-rs

./: .gitignore  Cargo.toml  Makefile  WORKSPACE  bazel-bin  bazel-out  bazel-sprayer-rs  bazel-testlogs  dissector.lua  setup.sh
cli_client/: Cargo.toml
cli_client/.cargo/: config.toml
cli_client/src/: main.rs
cli_server/: Cargo.toml  build.rs
cli_server/proto/: cli_server.proto
cli_server/src/: cli_server.rs  lib.rs
client/: Cargo.toml  config.yaml
client/.cargo/: config.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
sprayer/: Cargo.toml  README.md
sprayer/common/: Cargo.toml
sprayer/common/src/: lib.rs
sprayer/sprayer/: Cargo.toml  build.rs  crates.bzl
sprayer/sprayer/proto/: server.proto
sprayer/sprayer/remote/: BUILD.addr2line-0.21.0.bazel  BUILD.aho-corasick-1.0.5.bazel  BUILD.allocator-api2-0.2.16.bazel  BUILD.anstream-0.5.0.bazel  BUILD.anstyle-1.0.2.bazel  BUILD.anstyle-parse-0.2.1.bazel  BUILD.aya-0.11.0.bazel  BUILD.backtrace-0.3.69.bazel  BUILD.bytes-1.4.0.bazel  BUILD.clap_builder-4.4.2.bazel  BUILD.clap_derive-4.4.2.bazel  BUILD.errno-0.3.3.bazel  BUILD.errno-dragonfly-0.1.2.bazel  BUILD.gimli-0.28.0.bazel  BUILD.hashbrown-0.14.0.bazel  BUILD.hermit-abi-0.3.2.bazel  BUILD.humantime-2.1.0.bazel  BUILD.is-terminal-0.4.9.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.log-0.4.20.bazel  BUILD.mio-0.8.8.bazel  BUILD.num_cpus-1.16.0.bazel  BUILD.num_enum-0.7.0.bazel  BUILD.num_enum_derive-0.7.0.bazel  BUILD.proc-macro2-1.0.66.bazel  BUILD.regex-syntax-0.7.5.bazel  BUILD.syn-2.0.29.bazel  BUILD.thiserror-impl-1.0.47.bazel  BUILD.tokio-macros-2.1.0.bazel  BUILD.wasi-0.11.0+wasi-snapshot-preview1.bazel  BUILD.winapi-i686-pc-windows-gnu-0.4.0.bazel  BUILD.windows-sys-0.48.0.bazel  BUILD.windows_aarch64_gnullvm-0.48.5.bazel  BUILD.windows_i686_gnu-0.48.5.bazel  BUILD.windows_x86_64_gnullvm-0.48.5.bazel
sprayer/sprayer/src/: main.rs
sprayer/sprayer/src/buffer/: buffer.rs
sprayer/sprayer/src/disco/: disco.rs  mod.rs  server.rs
sprayer/tc-egress-ebpf/: Cargo.toml
sprayer/tc-egress-ebpf/src/: main.rs
sprayer/xdp-decap-ebpf/: Cargo.toml
sprayer/xdp-decap-ebpf/src/: main.rs
sprayer/xdp-dummy-ebpf/: Cargo.toml
sprayer/xdp-dummy-ebpf/src/: main.rs
sprayer/xdp-encap-ebpf/: Cargo.toml
sprayer/xdp-encap-ebpf/src/: main.rs
sprayer/xdp-ingress-common/: Cargo.toml
sprayer/xdp-ingress-ebpf/src/: main.rs
sprayer/xdp-peer-disco-ebpf/: Cargo.toml
sprayer/xdp-peer-disco-ebpf/src/: main.rs
sprayer/xtask/src/: build_ebpf.rs  run.rs
tc-egress/: Cargo.toml  cross-compile.txt
tc-egress/tc-egress/: BUILD.bazel  Cargo.toml
tc-egress/tc-egress-ebpf/: Cargo.toml
tc-egress/tc-egress-ebpf/src/: main.rs
tc-egress/tc-egress/remote/: BUILD.adler-1.0.2.bazel  BUILD.ahash-0.8.3.bazel  BUILD.anstyle-query-1.0.0.bazel  BUILD.anstyle-wincon-2.1.0.bazel  BUILD.anyhow-1.0.75.bazel  BUILD.aya-log-0.1.13.bazel  BUILD.aya-log-common-0.1.13.bazel  BUILD.aya-obj-0.1.0.bazel  BUILD.bitflags-2.4.0.bazel  BUILD.cc-1.0.83.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.clap-4.4.2.bazel  BUILD.clap_lex-0.5.1.bazel  BUILD.colorchoice-1.0.0.bazel  BUILD.core-error-0.0.0.bazel  BUILD.env_logger-0.10.0.bazel  BUILD.heck-0.4.1.bazel  BUILD.libc-0.2.147.bazel  BUILD.linux-raw-sys-0.4.5.bazel  BUILD.memchr-2.6.2.bazel  BUILD.miniz_oxide-0.7.1.bazel  BUILD.object-0.32.0.bazel  BUILD.once_cell-1.18.0.bazel  BUILD.pin-project-lite-0.2.13.bazel  BUILD.quote-1.0.33.bazel  BUILD.regex-1.9.4.bazel  BUILD.regex-automata-0.3.7.bazel  BUILD.rustc-demangle-0.1.23.bazel  BUILD.rustix-0.38.11.bazel  BUILD.signal-hook-registry-1.4.1.bazel  BUILD.socket2-0.5.3.bazel  BUILD.strsim-0.10.0.bazel  BUILD.termcolor-1.2.0.bazel  BUILD.thiserror-1.0.47.bazel  BUILD.tokio-1.32.0.bazel  BUILD.unicode-ident-1.0.11.bazel  BUILD.utf8parse-0.2.1.bazel  BUILD.version_check-0.9.4.bazel  BUILD.winapi-0.3.9.bazel  BUILD.winapi-util-0.1.5.bazel  (+6 more)
tc-egress/tc-egress/src/: main.rs
tc-egress/xtask/src/: build_ebpf.rs
udp-server/: Cargo.toml
udp-server/src/: main.rs
xdp-ingress/: Cargo.toml  README.md
xdp-ingress/xdp-ingress/: Cargo.toml
xdp-ingress/xdp-ingress-ebpf/: Cargo.toml
xdp-ingress/xdp-ingress-ebpf/src/: main.rs
xdp-ingress/xdp-ingress/src/: main.rs
xdp-ingress/xtask/src/: build_ebpf.rs  run.rs
