[package]
name = "cli_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"