[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
pnet = "0.34.0"
anyhow = "1.0.75"
common = { path = "../sprayer/common" }
rand = "0.8.5"
network-types = "0.0.4"
netlink-packet-route = "0.17.1"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
