[package]
name = "sprayer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
#aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya = { path = "../../../aya/aya", features = ["async_tokio"] }
aya-log = { path = "../../../aya/aya-log" }
clap = { version = "4.1", features = ["derive"] }
common = { path = "../common", features = ["user"] }
anyhow = "1"
aya-bpf = { git = "https://github.com/aya-rs/aya" }
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync","time"] }
interfaces = "0.0.9"
nix = { version = "0.27.1", features = ["net"] }
#libbpf-sys = "0.8.3"
#xsk-rs = { git = "https://github.com/DouglasGray/xsk-rs" }
libbpf-sys = "0.7.0+v0.7.0"
afxdp = { path = "../../../afxdp-rs" }
arraydeque = "0.4"
core_affinity = "0.5"
rlimit = "0.10.1"
network-types = "0.0.4"
futures = "0.3.28"
pnet = "0.34.0"
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "sprayer"
path = "src/main.rs"
